Added ability to install inset lights in top-aligned catwalks (PR#215, sergii)